# cardiovascular-assertion-portability

./: .gitattributes  .gitignore  README.md  create_cab_reference_implementation.py  pyproject.toml
cab_portability/: benchmark.py  cli.py  environment_mapping.py  routing.py  schema.py
docs/: cab_routing_output_schema.md  limitations.md  method_overview.md  not_clinical_use.md  quickstart.md
notebooks/: CAB_portability_demo.ipynb
reports/: final_cab_artifact_manifest.csv  final_cab_evidence_ladder_readiness_report.md  final_cab_readiness_report.md  final_cardiomyopathy_replication_v2_report.md  final_cli_reproducibility_report.md  final_noncardio_replication_report.md  final_publication_readiness_audit_v2.md  final_readiness_audit_v3.md
schema/: cab_routing_output_schema.json
scripts/: analyze_cab_expert_endpoint_verdicts.py  build_cab_10yr_rolling_origin_validation.py  build_cab_expert_endpoint_adjudication_run.py  build_cab_external_validation_proxy_stack.py  build_cab_hardcore_evidence_upgrade.py  build_cab_prospective_portability_prediction_registry.py  build_cab_prospective_portability_prediction_registry.py.bak_snapshotdiff  build_cab_silver_standard_stress_tests.py  build_disease_architecture_portability_regimes.py  build_domain_calibrated_balanced_v2.py  build_final_disease_architecture_meaning_travel_layer.py  build_fundamental_biology_meaning_mobility_layer.py  build_identity_vs_meaning_concordance_layer.py  build_modifier_penetrance_decircularized_evidence.py  build_reviewer_response_analyses.py  build_sads_postmortem_portability_framing_layer.py  (+17 more)
(+366 files in other folders)
