[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cab-portability"
version = "0.1.0"
description = "Research reference implementation for CAB assertion portability routing."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.0",
]

[project.scripts]
cab-portability = "cab_portability.cli:main"
